fix small horizontal scrollbar from Yasr by moving to flex display

--- a/packages/yasgui/src/style/TabPanel.css
+++ b/packages/yasgui/src/style/TabPanel.css
@@ -103,8 +103,10 @@
       }
 
       .textRow {
+        display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
+        gap: 0.2em;
         white-space: nowrap;
       }
 
